style.css
/* 
font-family: 'Bebas Neue', cursive;    👉 nav , some buttons
font-family: 'Montserrat', sans-serif; 👉 p [with 2 weights 400,700 (regular,bold)]
font-family: 'Alfa Slab One', cursive; 👉 H1,H2..
*/

/* 
    🌳🌳 Start genral reset  🌳🌳
*/

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

ul,
li {
  list-style-type: none;
}

a {
  text-decoration: none;
}

/*⛔⛔ End genral reset ⛔⛔*/

/* 
    🌳🌳 Start Header  🌳🌳 
*/

header {
  font-family: "Bebas Neue", cursive;
  height: 750px;
  background-image: url("./assets/images/header/pattern.jpg");
  color: #42200b;
}

header .wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 50px 50px 10px 50px;
}

header .contact {
  position: relative;
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
  font-size: 16px;
}

header .contact::before {
  content: url(./assets/images/header/moto.png);
  position: absolute;
  left: -50px;
  top: -10px;
}
header nav {
  padding-right: 50px;
}
header nav ul {
  display: flex;
  justify-content: flex-end;
}
header nav ul li {
  margin: 0 20px;
}
header nav ul li:last-child {
  margin-right: 0;
  color: red;
}
header nav li a {
  color: #42200b;
  font-size: 22px;
  letter-spacing: 4px;
}

header .hero {
  margin: 50px;
  display: flex;
  justify-content: space-between;
  position: relative;
}

header .caption p:first-child {
  border: 2px dashed #42200b;
  padding: 10px;
  font-size: 24px;
  font-weight: 400;
  color: #42200b;
  display: inline-block;
}
header .caption p:last-child {
  font-family: "Alfa Slab One", cursive;
  font-size: 50px;
  color: #42200b;
  text-shadow: 3px 3px #fff;
}
header .caption p:last-child span {
  font-family: "Alfa Slab One", cursive;
  font-size: 110px;
  color: #42200b;
  text-shadow: 3px 3px #fff;
}

header .hero .imgs {
  position: relative;
  width: 600px;
  height: 510px;
}
header .hero .imgs img {
  position: absolute;
  bottom: 0;
  right: 20px;
}
header .hero .imgs .burger {
  width: 480px;
}
header .hero .imgs .drink {
  width: 350px;
  right: -80px;
  bottom: 5px;
}
header .hero .imgs .potato {
  width: 300px;
  right: 255px;
  bottom: 120px;
}

header .discount {
  position: absolute;
  background: #df1b1c;
  color: white;
  border: 3px dashed white;
  width: 150px;
  height: 150px;
  right: 400px;
  bottom: 25px;
  border-radius: 75px;
  box-shadow: 0px 0px 0px 10px #df1b1c;
  font-size: 60px;
  font-family: "Bebas Neue", cursive;
}
header .discount span {
  font-size: 30px;
}
header .discount span:last-child {
  display: flex;
  justify-content: center;
  line-height: 25px;
  font-size: 40px;
  letter-spacing: 5px;
}

/*⛔⛔ End Header ⛔⛔*/

/* 
🌳🌳 Start Section Try Today  🌳🌳 
*/

.try-today {
  width: 90%;
  margin: 100px auto;
  display: flex;
  justify-content: space-between;
}
.try-today .card-container {
  width: 48%;
  position: relative;
  text-transform: uppercase;
  font-family: "Bebas Neue", cursive;
  color: white;
}
.try-today .card-container > div {
  position: relative;
}
.try-today .card-container:last-child {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.try-today .card-container img {
  width: 100%;
}
.try-today .card-container .label {
  position: absolute;
  top: 20px;
  left: 20px;
}
.try-today .card-container .caption {
  position: absolute;
  top: 45px;
  left: 20px;
  margin-top: 5px;
  font-size: 40px;
  line-height: 35px;
}
/*⛔⛔ End Section Try Today  ⛔⛔*/

